# deltafs-bb

./: AUTHORS  CMakeLists.txt  LICENSE
config/: narwhal_2_server.conf  narwhal_client.conf  narwhal_server.conf  trinitite_server.conf.1048576  trinitite_server.conf.1048576.1048576  trinitite_server.conf.1048576.16777216  trinitite_server.conf.1048576.2097152  trinitite_server.conf.1048576.33554432  trinitite_server.conf.1048576.4194304  trinitite_server.conf.1048576.67108864  trinitite_server.conf.1048576.8388608  trinitite_server.conf.15728640  trinitite_server.conf.15728640.1048576  trinitite_server.conf.15728640.16777216  trinitite_server.conf.15728640.2097152  trinitite_server.conf.15728640.4194304  trinitite_server.conf.2097152  trinitite_server.conf.2097152.1048576  trinitite_server.conf.2097152.16777216  trinitite_server.conf.2097152.2097152  trinitite_server.conf.2097152.33554432  trinitite_server.conf.2097152.4194304  trinitite_server.conf.2097152.67108864  trinitite_server.conf.2097152.8388608  trinitite_server.conf.4194304  trinitite_server.conf.4194304.1048576  trinitite_server.conf.4194304.16777216  trinitite_server.conf.4194304.2097152  trinitite_server.conf.4194304.33554432  trinitite_server.conf.4194304.4194304  trinitite_server.conf.4194304.67108864  trinitite_server.conf.4194304.8388608  trinitite_server.conf.8388608.1048576  trinitite_server.conf.8388608.16777216  trinitite_server.conf.8388608.2097152  trinitite_server.conf.8388608.33554432  trinitite_server.conf.8388608.4194304  trinitite_server.conf.8388608.67108864  trinitite_server.conf.8388608.8388608
deployment/: deltafs_bb_aprun.sh
include/: CMakeLists.txt  buddyclient.h  buddyserver.h
include/bbos/: bbos_api.h
src/: CMakeLists.txt
src/bbos_client/: CMakeLists.txt  bbos_client.cc
src/bbos_server/: CMakeLists.txt  bbos_server.cc
src/client/: buddyclient.cc  buddyclient.h  interface.h  interface.hpp
src/eval_bb/: CMakeLists.txt  eval_bb.c
src/libbbos/: CMakeLists.txt  bbos-config.cmake.in  bbos.cc  bbos.h  bbos_rpc.h  bbos_rpc_client.cc
src/rpc/: rpc_engine.cc  rpc_engine.h
src/server/: buddyserver.cc  buddyserver.h  interface.h  interface.hpp
tests/: CMakeLists.txt  bbos_unit_tests.cc  bbos_unit_tests_client.cc  eval_bb.c  file_io_test.c  multiclient_test.sh  test_dw.sh
